# cryptocurrency_strategy

./: CMakeLists.txt
src/: http.h  main.cpp  root_certificates.hpp
